--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
                     <!-- OPÇÃO 1: TESTE / ENTRADA (1 Caixa) -->
                     <!-- Mobile: Último (3) | Desktop: Esquerda (1) -->
                     <div class="flex flex-col border border-gray-200 rounded-2xl shadow-lg overflow-hidden bg-white relative order-3 lg:order-1 h-full">
-                        <div class="bg-blue-100 text-blue-600 text-center py-2 font-bold uppercase text-xs tracking-wider">
+                        <!-- BACKGROUND HEADER ATUALIZADO PARA #0077E3 -->
+                        <div class="bg-[#0077E3] text-white text-center py-2 font-bold uppercase text-xs tracking-wider">
                             EXPERIMENTE WELLNEE
                         </div>
                         <div class="p-6 flex-1 flex flex-col items-center text-center">
@@ -211,21 +212,26 @@
                             <h3 class="text-lg font-bold text-gray-800 mb-1">1 Caixa de Adesivos</h3>
                             <div class="flex items-center justify-center gap-2 mb-2">
                                 <span class="text-gray-400 line-through text-sm">$29.95</span>
-                                <span class="text-3xl font-black text-blue-600">$17.95</span>
+                                <!-- Preço na cor da marca -->
+                                <span class="text-3xl font-black text-[#0084FD]">$17.95</span>
                             </div>
-                            <div class="mb-6">
-                                <p class="text-sm text-gray-800 font-bold">10 Adesivos no Total</p>
-                                <p class="text-xs text-gray-500">Ideal para quem quer testar antes de investir mais.</p>
+
+                            <!-- BOX DE INFORMAÇÃO (Mantido o azul claro para contraste com o texto azul) -->
+                            <div class="bg-[#E2F1FE] w-full rounded-lg p-2 mb-6 border border-blue-100">
+                                <p class="text-[#0084FD] text-xs font-bold">10 Adesivos no Total</p>
+                                <p class="text-[10px] text-[#0084FD]">Ideal para quem quer testar antes de investir mais.</p>
                             </div>
                             
                             <ul class="space-y-3 mb-8 text-left w-full text-sm text-gray-600">
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-blue-500 mt-1"></i> <span>Alívio localizado para o dia a dia</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-blue-500 mt-1"></i> <span>Fácil de usar: destacar, colar e seguir</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-blue-500 mt-1"></i> <span>Boa opção para uso pontual</span></li>
+                                <!-- Ícones atualizados para a cor da marca -->
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Alívio localizado para o dia a dia</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Fácil de usar: destacar, colar e seguir</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Boa opção para uso pontual</span></li>
                             </ul>
 
                             <div class="mt-auto w-full">
-                                <a href="https://www.clickrtrckr.com/2LXFFTP/3K2QLC6/?uid=5031&qty=1" class="block w-full bg-white border-2 border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
+                                <!-- Botão -->
+                                <a href="https://www.clickrtrckr.com/2LXFFTP/3K2QLC6/?uid=5031&qty=1" class="block w-full bg-white border-2 border-[#0084FD] text-[#0084FD] hover:bg-[#0084FD] hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
                                     EXPERIMENTAR COM 1 CAIXA
                                 </a>
                                 <p class="text-[10px] text-gray-400 mt-2">Perfeito para primeiros usuários</p>
