--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#0084FD">
+    <!-- Updated Theme Color to Dark Green -->
+    <meta name="theme-color" content="#556B2F">
     <meta name="referrer" content="no-referrer-when-downgrade">
     
     <title>Wellnee Adesivos para Alívio da Dor | Loja Oficial - 70% OFF Hoje</title>
@@ -74,11 +75,12 @@
     <style>
         body { font-family: 'Inter', sans-serif; opacity: 0; transition: opacity 0.2s ease-in; }
         body.loaded { opacity: 1; }
-        .text-brand-dark { color: #0084FD; }
-        .bg-brand-dark { background-color: #0084FD; }
-        .border-brand-dark { border-color: #0084FD; }
-        .bg-cta { background-color: #0084FD; }
-        .bg-cta:hover { background-color: #006cd1; }
+        /* REPLACED BLUE WITH DARK GREEN (#556B2F) */
+        .text-brand-dark { color: #556B2F; }
+        .bg-brand-dark { background-color: #556B2F; }
+        .border-brand-dark { border-color: #556B2F; }
+        .bg-cta { background-color: #556B2F; }
+        .bg-cta:hover { background-color: #425225; }
         html { scroll-behavior: smooth; }
         @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
         .animate-fade-in-up { animation: fadeInUp 0.3s ease-out forwards; }
@@ -201,8 +203,8 @@
                     <!-- OPÇÃO 1: TESTE / ENTRADA (1 Caixa) -->
                     <!-- Mobile: Último (3) | Desktop: Esquerda (1) -->
                     <div class="flex flex-col border border-gray-200 rounded-2xl shadow-lg overflow-hidden bg-white relative order-3 lg:order-1 h-full">
-                        <!-- BACKGROUND HEADER ATUALIZADO PARA #0077E3 -->
-                        <div class="bg-[#0077E3] text-white text-center py-2 font-bold uppercase text-xs tracking-wider">
+                        <!-- HEADER AGORA COM VERDE ESCURO (#556B2F) -->
+                        <div class="bg-[#556B2F] text-white text-center py-2 font-bold uppercase text-xs tracking-wider">
                             EXPERIMENTE WELLNEE
                         </div>
                         <div class="p-6 flex-1 flex flex-col items-center text-center">
@@ -212,26 +214,26 @@
                             <h3 class="text-lg font-bold text-gray-800 mb-1">1 Caixa de Adesivos</h3>
                             <div class="flex items-center justify-center gap-2 mb-2">
                                 <span class="text-gray-400 line-through text-sm">$29.95</span>
-                                <!-- Preço na cor da marca -->
-                                <span class="text-3xl font-black text-[#0084FD]">$17.95</span>
+                                <!-- Preço em Verde Escuro -->
+                                <span class="text-3xl font-black text-[#556B2F]">$17.95</span>
                             </div>
 
-                            <!-- BOX DE INFORMAÇÃO (Mantido o azul claro para contraste com o texto azul) -->
-                            <div class="bg-[#E2F1FE] w-full rounded-lg p-2 mb-6 border border-blue-100">
-                                <p class="text-[#0084FD] text-xs font-bold">10 Adesivos no Total</p>
-                                <p class="text-[10px] text-[#0084FD]">Ideal para quem quer testar antes de investir mais.</p>
+                            <!-- BOX DE INFORMAÇÃO COM TINT DO VERDE PRODUTO (#F9FAE6) -->
+                            <div class="bg-[#F9FAE6] w-full rounded-lg p-2 mb-6 border border-gray-100">
+                                <p class="text-[#556B2F] text-xs font-bold">10 Adesivos no Total</p>
+                                <p class="text-[10px] text-[#556B2F]">Ideal para quem quer testar antes de investir mais.</p>
                             </div>
                             
                             <ul class="space-y-3 mb-8 text-left w-full text-sm text-gray-600">
-                                <!-- Ícones atualizados para a cor da marca -->
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Alívio localizado para o dia a dia</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Fácil de usar: destacar, colar e seguir</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#0084FD] mt-1"></i> <span>Boa opção para uso pontual</span></li>
+                                <!-- Ícones em Verde Escuro -->
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#556B2F] mt-1"></i> <span>Alívio localizado para o dia a dia</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#556B2F] mt-1"></i> <span>Fácil de usar: destacar, colar e seguir</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#556B2F] mt-1"></i> <span>Boa opção para uso pontual</span></li>
                             </ul>
 
                             <div class="mt-auto w-full">
-                                <!-- Botão -->
-                                <a href="https://www.clickrtrckr.com/2LXFFTP/3K2QLC6/?uid=5031&qty=1" class="block w-full bg-white border-2 border-[#0084FD] text-[#0084FD] hover:bg-[#0084FD] hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
+                                <!-- Botão em Verde Escuro -->
+                                <a href="https://www.clickrtrckr.com/2LXFFTP/3K2QLC6/?uid=5031&qty=1" class="block w-full bg-white border-2 border-[#556B2F] text-[#556B2F] hover:bg-[#556B2F] hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
                                     EXPERIMENTAR COM 1 CAIXA
                                 </a>
                                 <p class="text-[10px] text-gray-400 mt-2">Perfeito para primeiros usuários</p>
