--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "ux336sobgj");
+        })(window, document, "clarity", "script", "v17ou5o6x4");
     </script>
 
     <!-- SEO & PERFORMANCE INFRASTRUCTURE -->
@@ -121,7 +121,9 @@
             <!-- HERO SECTION -->
             <main class="px-4 pt-6 pb-8 lg:px-12 lg:py-12 grid grid-cols-1 lg:grid-cols-12 gap-8 lg:gap-12 items-start">
                 <div class="lg:col-span-5 lg:sticky lg:top-48 text-center lg:text-left">
-                    <div class="mb-6 lg:mb-0 relative inline-block w-full rounded-2xl overflow-hidden shadow-lg border border-gray-100">
+                    <!-- REMOVED: rounded-2xl overflow-hidden shadow-lg border border-gray-100 -->
+                    <!-- NOW: Clean container -->
+                    <div class="mb-6 lg:mb-0 relative inline-block w-full">
                          <img src="images/wellnee-pain-relief-patches.webp" alt="Wellnee Pain Relief Patches" class="w-full h-auto">
                     </div>
                 </div>
