--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                     </div>
 
                     <!-- OPÇÃO 2: MAIS POPULAR (4 Caixas) -->
-                    <!-- Mobile: Meio (2) | Desktop: Direita (3) -->
+                    <!-- ATUALIZADO PARA USAR PALETA HERBAL (Substituindo green-500 vibrante) -->
                     <div class="flex flex-col border border-gray-200 rounded-2xl shadow-lg overflow-hidden bg-white relative order-2 lg:order-3 h-full">
-                        <div class="bg-green-500 text-white text-center py-2 font-bold uppercase text-xs tracking-wider">
+                        <div class="bg-[#4A5D23] text-white text-center py-2 font-bold uppercase text-xs tracking-wider">
                             <i class="fas fa-star"></i> <span>MAIS POPULAR</span>
                         </div>
                         <div class="p-6 flex-1 flex flex-col items-center text-center">
@@ -256,22 +256,22 @@
                             <h3 class="text-lg font-bold text-gray-800 mb-1">4 Caixas de Adesivos</h3>
                             <div class="flex items-center justify-center gap-2 mb-2">
                                 <span class="text-gray-400 line-through text-sm">$186.53</span>
-                                <span class="text-3xl font-black text-green-600">$55.96</span>
+                                <span class="text-3xl font-black text-[#4A5D23]">$55.96</span>
                             </div>
                             
-                            <div class="bg-green-50 w-full rounded-lg p-2 mb-6 border border-green-100">
-                                <p class="text-green-800 text-xs font-bold">40 Adesivos no Total</p>
-                                <p class="text-[10px] text-green-700">A escolha mais equilibrada entre preço e duração.</p>
+                            <div class="bg-[#F2F5D9] w-full rounded-lg p-2 mb-6 border border-[#E3E8C3]">
+                                <p class="text-[#4A5D23] text-xs font-bold">40 Adesivos no Total</p>
+                                <p class="text-[10px] text-[#3A4A1C]">A escolha mais equilibrada entre preço e duração.</p>
                             </div>
 
                             <ul class="space-y-3 mb-8 text-left w-full text-sm text-gray-600">
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-green-500 mt-1"></i> <span>Alívio por semanas, não apenas dias</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-green-500 mt-1"></i> <span>Ideal para uso contínuo</span></li>
-                                <li class="flex items-start gap-2"><i class="fas fa-check text-green-500 mt-1"></i> <span>Economia significativa</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#4A5D23] mt-1"></i> <span>Alívio por semanas, não apenas dias</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#4A5D23] mt-1"></i> <span>Ideal para uso contínuo</span></li>
+                                <li class="flex items-start gap-2"><i class="fas fa-check text-[#4A5D23] mt-1"></i> <span>Economia significativa</span></li>
                             </ul>
 
                             <div class="mt-auto w-full">
-                                <a href="https://www.clickrtrckr.com/2LXFFTP/3JWKZ5C/?uid=4976" class="block w-full bg-white border-2 border-green-500 text-green-600 hover:bg-green-600 hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
+                                <a href="https://www.clickrtrckr.com/2LXFFTP/3JWKZ5C/?uid=4976" class="block w-full bg-white border-2 border-[#4A5D23] text-[#4A5D23] hover:bg-[#4A5D23] hover:text-white font-bold py-3 rounded-xl transition uppercase text-sm">
                                     ESCOLHER OPÇÃO MAIS POPULAR
                                 </a>
                                 <p class="text-[10px] text-gray-400 mt-2 font-medium">Melhor equilíbrio entre preço e duração</p>
@@ -280,7 +280,7 @@
                     </div>
 
                     <!-- OPÇÃO 3: MELHOR CUSTO-BENEFÍCIO (10 Caixas) -->
-                    <!-- Mobile: Topo (1) | Desktop: Centro (2) -->
+                    <!-- Mantido Orange como destaque de "promoção", mas levemente ajustado para não brigar com o oliva -->
                     <div class="flex flex-col border-2 border-orange-500 rounded-2xl shadow-2xl overflow-hidden bg-white relative transform lg:scale-105 z-10 order-1 lg:order-2">
                         <div class="absolute top-0 right-0 bg-red-600 text-white text-[10px] font-bold px-3 py-1 rounded-bl-lg shadow-sm">
                             70% OFF
